# veinlegends

./: .gitignore  Anchor.toml  HANDOFF.md  README.md  tsconfig.json  watchdog-veinlegends.sh
docs/airdrop/: AIRDROP_PLAN.md
docs/marketing/discord/: SERVER_STRUCTURE.md
docs/marketing/twitter/: CONTENT_CALENDAR.md
programs/minelegends/: Cargo.toml  README.md
programs/minelegends/src/: constants.rs  errors.rs  instructions.rs  lib.rs  state.rs
tests/: minelegends.ts
web/: .env.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/arena/: page.tsx
web/app/battle/: page.tsx
web/app/dashboard/: page.tsx
web/app/market/: page.tsx
web/app/quests/: page.tsx
web/app/swap/: page.tsx
web/app/tournament/: page.tsx
web/app/whitepaper/: page.tsx
web/components/: BattleContent.tsx  BattleSimulator.tsx  BreedSimulator.tsx  CTA.tsx  Characters.tsx  Footer.tsx  Gameplay.tsx  Hero.tsx  HeroCard.tsx  MiningDashboard.tsx  Navbar.tsx  PageLayout.tsx  QuestsContent.tsx  Roadmap.tsx  Stats.tsx  Tokenomics.tsx  TournamentContent.tsx  WalletButton.tsx
web/lib/: battle.ts  cards.ts  characters.ts  mining.ts  parts.ts  program.ts  wallet-provider-inner.tsx  wallet-provider.tsx  weapons.ts
web/public/docs/: GDD.md  ROADMAP.md  TOKENOMICS.md  WHITEPAPER.md
