[package]
name = "minelegends"
version = "0.1.0"
description = "MineLegends - Web3 idle RPG on Solana with $MNLG token"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "minelegends"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
